Add improved og kllama loading and general benchmarking